tests/test_assets/semantic/valid/switch/integer_switch.cog
classify_int::(x: i32) -> i32 {
    switch x {
        case 0:
            return 10;

        case 1:
            return 20;

        default:
            return 30;
    }
}