tests/test_assets/semantic/invalid/void_values/switch_expression.cog
does_nothing::() -> void {
}

test::() -> void {
    switch does_nothing() {
        default:
            return;
    }
}